--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Julius</title>
 </head>
 <body>
-    
+    <div id="marca">
+        <img src="img/LogoJulius.png" alt="Julius">
+        <span>JULIUS</span>
+    </div>
+
+    <div id="header">
+        <span id="boasVindas">Olá, Fulano</span>
+        <span id="slogan">O Julius vai te ajudar a colocar sua vida financeira no eixos!</span>
+    </div>
+
+    <div id="container">
+        <div id="esquerda">
+            <span id="lancamentos">Seus lançamentos</span>
+            <button id="novoLancamento">Novo lançamento</button>
+
+            <div id="areaLancamentos">
+                <div class="blocoLancamento">
+                    <img src="img/menos.png" alt="Gasto">
+                    <div class="descricaoLancamento">
+                        <span class="valor gasto">R$35.97</span>
+                        <span>15/09/2020</span>
+                        <span>Padaria Villas Boas</span>
+                    </div>
+                </div>
+
+                <div class="blocoLancamento">
+                    <img src="img/menos.png" alt="Gasto">
+                    <div class="descricaoLancamento">
+                        <span class="valor gasto">R$35.97</span>
+                        <span>15/09/2020</span>
+                        <span>Padaria Villas Boas</span>
+                    </div>
+                </div>
+
+                <div class="blocoLancamento">
+                    <img src="img/mais.png" alt="Entrada">
+                    <div class="descricaoLancamento">
+                        <span class="valor entrada">R$5.50</span>
+                        <span>12/09/2020</span>
+                        <span>Loja de Bijus</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="direita">
+            <span id="labelRenda">Sua renda mensal</span>
+            <img src="img/editar.png" alt="Alterar a renda mensal">
+            <span id="renda">R$3.000</span>
+        </div>
+    </div>
 </body>
 </html>
