--- a/index.html
+++ b/index.html
@@ -19,43 +19,28 @@
 
     <div id="container">
         <div id="esquerda">
-            <span id="lancamentos">Seus lançamentos</span>
+            <span id="lancamentos">Nenhum lançamento cadastrado</span>
             <button id="novoLancamento">Novo lançamento</button>
 
+            <div id="formularioLancamento">
+                <form>
+                    <label for="valor">Valor:</label>
+                    <input type="number" name="valor" id="valor">
+                    <label for="descricao">Descrição:</label>
+                    <input type="text" name="descricao" id="descricao">
+                    <label for="dataLancamento">Data do lançamento</label>
+                    <input type="date" name="dataLancamento" id="dataLancamento">
+                    <button id="botaoLancar">Lançar</button>
+                </form>
+            </div>
+
             <div id="areaLancamentos">
-                <div class="blocoLancamento">
-                    <img src="img/menos.png" alt="Gasto">
-                    <div class="descricaoLancamento">
-                        <span class="valor gasto">R$35.97</span>
-                        <span>15/09/2020</span>
-                        <span>Padaria Villas Boas</span>
-                    </div>
-                </div>
-
-                <div class="blocoLancamento">
-                    <img src="img/menos.png" alt="Gasto">
-                    <div class="descricaoLancamento">
-                        <span class="valor gasto">R$35.97</span>
-                        <span>15/09/2020</span>
-                        <span>Padaria Villas Boas</span>
-                    </div>
-                </div>
-
-                <div class="blocoLancamento">
-                    <img src="img/mais.png" alt="Entrada">
-                    <div class="descricaoLancamento">
-                        <span class="valor entrada">R$5.50</span>
-                        <span>12/09/2020</span>
-                        <span>Loja de Bijus</span>
-                    </div>
-                </div>
             </div>
         </div>
 
         <div id="direita">
-            <span id="labelRenda">Sua renda mensal</span>
-            <img src="img/editar.png" alt="Alterar a renda mensal">
-            <span id="renda">R$3.000</span>
+            <span id="labelRenda">Dinheiro em caixa</span>
+            <span id="renda">0</span>
         </div>
     </div>
 </body>
