Creating the registration form for the releases.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div id="container">
         <div id="esquerda">
             <span id="lancamentos">Nenhum lançamento cadastrado</span>
-            <button id="novoLancamento">Novo lançamento</button>
+            <button id="novoLancamento" onclick="alternarFormulario()">
+                Novo lançamento
+            </button>
 
             <div id="formularioLancamento">
                 <form>
@@ -43,5 +45,7 @@
             <span id="renda">0</span>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
