--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg==" crossorigin="anonymous"></script>
     <title>Julius</title>
 </head>
 <body>
@@ -26,8 +27,14 @@
 
             <div id="formularioLancamento">
                 <form onsubmit="lancar(event)">
+                    <div id="blocoTipoLancamento">
+                        <input type="radio" name="tipoLancamento" id="entrada">
+                        <label for="entrada" class="entrada">Entrada</label>
+                        <input type="radio" name="tipoLancamento" id="gasto" checked>
+                        <label for="gasto" class="gasto">Gasto</label>
+                    </div>
                     <label for="valor">Valor:</label>
-                    <input type="number" step="0.01" name="valor" id="valor" required>
+                    <input type="number" step="0.01" min="0" name="valor" id="valor" required>
                     <label for="descricao">Descrição:</label>
                     <input type="text" name="descricao" id="descricao" required>
                     <label for="dataLancamento">Data do lançamento</label>
@@ -40,9 +47,11 @@
             </div>
         </div>
 
-        <div id="direita">
+         <div id="direita">
             <span id="labelRenda">Dinheiro em caixa</span>
             <span id="renda">R$ 0</span>
+
+            <canvas id="graficoLancamentos"></canvas>
         </div>
     </div>
 
